# GameofLife

./: config.py  main.py  pyproject.toml
