[tool.poetry]
name = "GameofLife"
version = "0.1.0"
description = ""
authors = ["Aleksandra Mochol <mocholaleksandra@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
pydantic = "^1.10.7"
python-dotenv = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
